--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,10 @@ li {
 }
 
 .navbar {
+  box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.4);
   border-radius: 8px;
   padding: 5px;
-  width: 80%;
+  width: 70%;
   margin: 40px auto;
   height: 80px;
   position: relative;
@@ -82,6 +83,97 @@ li {
 }
 .navbar-links-right span {
   border: 1px solid #dad8d8;
+}
+
+main {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+main .container-content {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+main .container-content .menu ul {
+  display: flex;
+}
+main .container-content .menu ul li {
+  position: relative;
+  margin: 20px 30px 20px 0;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 22px;
+  color: #000000;
+  font-style: normal;
+  color: rgba(214, 212, 212, 0.88);
+  padding-bottom: 10px;
+}
+main .container-content .menu ul li::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background: rgba(214, 212, 212, 0.88);
+}
+main .container-content .menu ul .selected-li {
+  color: #b00000;
+}
+main .container-content .menu ul .selected-li::after {
+  background: #b00000;
+}
+main .container-content .title {
+  width: 608px;
+  height: 233px;
+}
+main .container-content .title h2 {
+  font-weight: 900;
+  font-size: 64px;
+  line-height: 78px;
+}
+main .container-content .description {
+  width: 435px;
+  height: 56px;
+  margin: 35px 0;
+}
+main .container-content .description p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #808080;
+}
+main .container-content .btns {
+  margin-top: 60px;
+}
+main .container-content .btns button {
+  margin-right: 20px;
+  color: white;
+  width: 160px;
+  height: 50px;
+  background: #b00000;
+  border-radius: 8px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "Poppins";
+}
+main .container-content .btns .btn1 {
+  box-shadow: 0px 0px 64px rgba(176, 0, 0, 0.3);
+  border: 2px solid transparent;
+}
+main .container-content .btns .btn2 {
+  background-color: transparent;
+  color: black;
+  border: 2px solid black;
+}
+main .container-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 
 /*# sourceMappingURL=style.css.map */
