--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,9 +1,10 @@
 //@import "_mixins.scss";
 .navbar {
   //background-color: aqua; //CHECK!
+  box-shadow: 0px 0px 25px -10px rgba(0,0,0,0.4);
   border-radius: 8px;
   padding: 5px;
-  width: 80%;
+  width: 70%;
   margin: 40px auto;
   height: 80px;
   position: relative;
