--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,23 @@ main .container-image {
   line-height: 25px;
   margin: 0 30px;
 }
+.payment-plan .content-container .data-selector .year-discount {
+  position: relative;
+}
+.payment-plan .content-container .data-selector .year-discount::after {
+  content: "20% discount";
+  font-weight: 900;
+  font-size: 10px;
+  padding: 8px;
+  background-color: #ffe87a;
+  border-radius: 8px;
+  width: 70px;
+  height: 24px;
+  position: absolute;
+  z-index: 2;
+  top: -60%;
+  left: 120%;
+}
 .payment-plan .content-container .subscribe-lvl {
   text-align: center;
   display: flex;
