--- a/scss/_services_page.scss
+++ b/scss/_services_page.scss
@@ -10,7 +10,7 @@
     justify-content: space-between;
     .description {
       width: 45%;
-      color: #18191f;
+      color: $color-soft-black;
       h3 {
         font-weight: 900;
         font-size: 48px;
