--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -5,3 +5,11 @@
   color: #000000;
   font-style: normal;
 }
+
+@mixin footer-txt {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  color: #e6e6e6;
+}
