added packages calc but it doesnt work properly

--- a/scss/_paymant-plan.scss
+++ b/scss/_paymant-plan.scss
@@ -74,6 +74,10 @@
         line-height: 25px;
         margin: 0 30px;
       }
+
+      .active-date{
+        color: $color-main-red;
+      }
       .year-discount {
         position: relative;
 
