--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ main .container-content .btns button {
   font-size: 14px;
   line-height: 24px;
   font-family: "Poppins";
+  transition: all 0.3s ease;
 }
 main .container-content .btns button:hover {
   cursor: pointer;
@@ -171,10 +172,18 @@ main .container-content .btns .btn1 {
   box-shadow: 0px 0px 64px rgba(176, 0, 0, 0.3);
   border: 2px solid transparent;
 }
+main .container-content .btns .btn1:hover {
+  background-color: transparent;
+  color: black;
+}
 main .container-content .btns .btn2 {
   background-color: transparent;
   color: black;
   border: 2px solid black;
+}
+main .container-content .btns .btn2:hover {
+  background-color: black;
+  color: #fff;
 }
 main .container-image {
   display: flex;
@@ -326,6 +335,9 @@ main .container-image {
   font-size: 25px;
   line-height: 25px;
   margin: 0 30px;
+}
+.payment-plan .content-container .data-selector .active-date {
+  color: #b00000;
 }
 .payment-plan .content-container .data-selector .year-discount {
   position: relative;
