--- a/scss/_paymant-plan.scss
+++ b/scss/_paymant-plan.scss
@@ -117,6 +117,9 @@
         padding: 0 100px;
         //margin: 0 10px;
         border-bottom: 4px solid #c4c4c4;
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
@@ -163,6 +166,12 @@
         font-size: 14px;
         line-height: 32px;
         font-family: "Poppins";
+        transition: all 0.3s ease;
+
+        &:hover{
+          cursor: pointer;
+          box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+        }
       }
       .privilege-list {
         line-height: 36px;
