--- a/scss/_paymant-plan.scss
+++ b/scss/_paymant-plan.scss
@@ -136,6 +136,7 @@
       border: 1.5px solid #c4c4c4;
       box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
       border-radius: 15px;
+      margin: 20px 30px;
 
       h3 {
         font-weight: 600;
