--- a/scss/_title_main.scss
+++ b/scss/_title_main.scss
@@ -6,7 +6,7 @@ main {
   justify-content: space-between;
   .container-content {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     //background-color: red;
     width: 50%;
     .menu ul {
@@ -29,7 +29,7 @@ main {
           left: 0;
           background: rgba(214, 212, 212, 0.88);
         }
-        &:hover{
+        &:hover {
           cursor: pointer;
         }
       }
@@ -53,16 +53,14 @@ main {
       }
     }
 
-    .description-main {
+    .description {
       width: 435px;
       height: 56px;
       margin: 35px 0;
-      p {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 28px;
-        color: #808080;
-      }
+      font-weight: 400; //P DELETED
+      font-size: 16px;
+      line-height: 28px;
+      color: #808080;
     }
 
     .btns {
@@ -80,7 +78,7 @@ main {
         line-height: 24px;
         font-family: "Poppins";
         transition: all 0.3s ease;
-        &:hover{
+        &:hover {
           cursor: pointer;
         }
       }
@@ -88,8 +86,8 @@ main {
       .btn1 {
         box-shadow: 0px 0px 64px rgba(176, 0, 0, 0.3);
         border: 2px solid transparent;
-        
-        &:hover{
+
+        &:hover {
           background-color: transparent;
           color: black;
         }
@@ -99,7 +97,7 @@ main {
         background-color: transparent;
         color: black;
         border: 2px solid black;
-        &:hover{
+        &:hover {
           background-color: black;
           color: #fff;
         }
@@ -107,7 +105,7 @@ main {
     }
   }
 
-  .container-image{
+  .container-image {
     //background-color: #808080;
     display: flex;
     justify-content: center;
