--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,7 +1,7 @@
 //@import "_mixins.scss";
 .navbar {
   //background-color: aqua; //CHECK!
-  box-shadow: 0px 0px 25px -10px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.4);
   border-radius: 8px;
   padding: 5px;
   width: 70%;
@@ -12,6 +12,9 @@
   align-items: center;
   justify-content: space-around;
   .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 10%;
     img {
       width: 90.81px;
@@ -49,7 +52,7 @@
       margin: 0 20px;
 
       &:hover {
-        cursor:pointer;
+        cursor: pointer;
       }
     }
 
