--- a/css/style.css
+++ b/css/style.css
@@ -1027,6 +1027,119 @@ footer .copyright h3 {
   .information-container-2 .services-list .boxes h3 {
     font-size: 16px;
   }
+  .payment-plan .content-container .title h1 {
+    font-size: 25px;
+    line-height: 40px;
+  }
+  .payment-plan .content-container .title h3 {
+    font-size: 15px;
+  }
+  .payment-plan .content-container .data-selector input[type=checkbox]:checked + label:after {
+    left: calc(100% - 2.5px);
+  }
+  .payment-plan .content-container .data-selector label {
+    width: 40px;
+    height: 20px;
+  }
+  .payment-plan .content-container .data-selector label:after {
+    top: 2.5px;
+    left: 2.5px;
+    width: 15px;
+    height: 15px;
+  }
+  .payment-plan .content-container .data-selector label:active:after {
+    width: 20px;
+  }
+  .payment-plan .content-container .data-selector .year-discount::after {
+    padding: 3px;
+    top: -60%;
+    left: 110%;
+  }
+  .payment-plan .content-container .subscribe-lvl {
+    align-items: center;
+  }
+  .payment-plan .content-container .subscribe-lvl h3 {
+    padding: 0px;
+    font-size: 16px;
+  }
+  .payment-plan .packages .box h3 {
+    font-size: 20px;
+  }
+  .payment-plan .packages .box h1 {
+    font-size: 30px;
+  }
+  .payment-plan .packages .box button {
+    padding: 5px 30px;
+  }
+  .stories-section-container-title {
+    width: auto;
+  }
+  .stories-section-container-title img {
+    width: 80px;
+    height: 60px;
+    left: -15%;
+    top: -20%;
+  }
+  .stories-section-container-title h1 {
+    width: auto;
+    font-size: 28px;
+  }
+  .stories-section-container-title h3 {
+    font-size: 14px;
+  }
+  .stories-section-container-boxes {
+    width: auto;
+    height: auto;
+  }
+  .stories-section-container-boxes .box1, .stories-section-container-boxes .box2, .stories-section-container-boxes .box3 {
+    width: auto;
+    height: auto;
+  }
+  .stories-section-container-boxes .box1 .description p, .stories-section-container-boxes .box1 .description h3, .stories-section-container-boxes .box1 .description h5, .stories-section-container-boxes .box2 .description p, .stories-section-container-boxes .box2 .description h3, .stories-section-container-boxes .box2 .description h5, .stories-section-container-boxes .box3 .description p, .stories-section-container-boxes .box3 .description h3, .stories-section-container-boxes .box3 .description h5 {
+    line-height: 25px;
+    font-size: 14px;
+  }
+  .stories-section-footer-description h1 {
+    font-size: 25px;
+  }
+  .stories-section-footer-description p {
+    font-size: 14px;
+  }
+  .stories-section-footer-companies {
+    grid-template-columns: auto auto;
+  }
+  .get_in_touch-content-box {
+    height: 532px;
+  }
+  .get_in_touch-content-box button {
+    margin: 30px auto;
+  }
+  footer {
+    padding: 10px;
+  }
+  footer .links-box1 {
+    width: 100%;
+  }
+  footer .links-box1 p {
+    width: 90%;
+  }
+  footer .links .links-boxes {
+    width: 100%;
+  }
+  footer .links .links-boxes .links-box2 {
+    line-height: 20px;
+    font-size: 14px;
+  }
+  footer .links .links-boxes .links-box2 h3 {
+    font-size: 14px;
+  }
+  footer .copyright {
+    margin: 40px auto;
+    width: 90%;
+  }
+  footer .copyright h3 {
+    font-size: 14px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
